--- a/css.css
+++ b/css.css
@@ -100,3 +100,32 @@
     color: beige;
     padding: 50px;
 }
+footer{
+    width: 100%;
+    height: 70vh;
+    background-image: url("./logo/logo-light.png"),linear-gradient(rgba(0,0,0,1),rgba(0,0,0,0.9));
+    background-repeat:no-repeat;
+    background-blend-mode: overlay;
+    color: white;
+    line-height: 1.8em;
+}
+.footer-section{
+    display: flex;
+    width: 75%;
+    height: 60vh;
+    margin: 0 auto;
+    justify-self: space-around;
+    align-items: center;
+    border-bottom: 1px solid gray;
+    gap: 100px;
+}
+.logo-box{
+    width: 25%;
+
+}
+.logo-box img{
+        width: 200px;
+}
+.foc{
+    text-align: center;
+}
